[package]
name = "qwik-route-ls"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A minimal LSP server providing href completion for Qwik City <Link> components, based on the src/routes directory structure"

[[bin]]
name = "qwik-route-ls"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"
anyhow = "1"
notify = "6"
walkdir = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true